# rippit

./: CMakeLists.txt  README  TODO
src/: CMakeLists.txt  love.c  love.h  rippit.c  rippit.h  rippitversion.h.in
